backup: commit completo do sistema MelSell antes de formatação do PC
- Avanços significativos no backend: suporte a perfis de usuário, endereço via CEP, tracking de pedidos em tempo real (WebSocket + shipments), supplier admin completo, vendor dashboard/stats, upload de imagens de produto, melhorias de segurança e validação, novas migrations (V6-V11), PaymentService real, etc.
- Avanços no frontend: novas páginas (Profile, OrderTracking, Suppliers, FAQ, About), componentes de tracking, cart drawer, credit card, vendor notifications, stock status, product image upload, address by CEP, melhorias de tema/dark mode, utils e testes.
- Limpeza do repositório: removidos do git (mas mantidos localmente) target/, *.log, *.pid e outros artefatos de build/compilação.
- Adicionado .gitignore no root para proteger uploads/, data/ e reforçar ignores de build.
- Remote HTTPS limpo (token de acesso removido da URL do origin por segurança).
- Inclui scripts utilitários e documentação de tecnologias.

Sistema pronto para backup seguro no GitHub.